Fix alignment of lists

--- a/reveal.js/css/main.css
+++ b/reveal.js/css/main.css
@@ -127,9 +127,9 @@ body {
 .reveal ol, 
 .reveal ul {
 	display: block;
-
 	text-align: left;
-	margin: 0 0 0 1em;
+	margin: 0 auto;
+	width: 80%;
 }
 
 .reveal ol {
